changes so the password and password retry edit boxes line up with the other edit boxes
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5148 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/src/Register.css
+++ b/simias-server/src/Register.css
@@ -60,11 +60,15 @@ form
 
 #passwordEdit
 {
+	font-family:Comic Sans MS;
+	font-size:small;
 	width:20em;
 }
 
 #pwdVerifyEdit
 {
+	font-family:Comic Sans MS;
+	font-size:small;
 	width:20em;
 }
 
