--- a/src/admin/iFolders.css
+++ b/src/admin/iFolders.css
@@ -1,3 +1,72 @@
-body
+.nav
+{
+	padding: 1em;
+	float: left;
+}
+
+.searchnav
+{
+	clear: both;
+	padding-bottom: .5em;
+}
+
+.ifolderssnav
+{
+	width: 35em;
+}
+
+.ifolderlist
+{
+	clear: left;
+	width: 100%;
+}
+
+.ifolderlistheader td
+{
+	color: black;
+	font-size: 0.8em;
+	font-weight: bold;
+	background-color: #efeee9;
+	border-top: solid 1px black;
+	border-bottom: solid 1px black;
+}
+
+.ifolderlistitem
+{
+	height: 1.5em;
+}
+
+.ifolderlistaltitem
+{ 
+	height: 1.5em;
+	background-color: #efeee9;
+}
+
+.ifolderitem1
+{
+	width: 2em;
+}
+
+.ifolderitem2
+{
+	width: 3em;
+}
+
+.ifolderitem2 img
+{
+	padding-left: .3em;
+}
+
+.ifolderitem3
+{
+	width: 22em;
+}
+
+.ifolderitem4
+{
+	width: 12em;
+}
+
+.ifolderitem5
 {
 }
