added an empty Footer (for the future user quota)
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6227 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -60,6 +60,14 @@ a:hover
 	padding: 0 12px 0 12px;
 }
 
+#footer
+{
+	font-size: 0.9em;
+	background-color: #99CCFF;
+	margin: 16px 0 0 0;
+	padding: 4px 8px 4px 8px;
+}
+
 .columns
 {
 	width: 100%;
