--- a/src/admin/Login.css
+++ b/src/admin/Login.css
@@ -1,43 +1,79 @@
-.loginDialog
+.loginpage
 {
-}
-
-.loginDialog td
-{
+	width: 100%;
+	height: 90%;
+	padding-top: 12em;
 	font-size: 0.8em;
 }
 
-.loginDialog .loginHelp
+.loginbanner
 {
-	font-size: 0.8em;
+	border: solid 1px #e50000;
+	background-color: #e50000;
+	width: 35em;
+	height: 2.5em;
+}
+
+.loginbanner img
+{
+	float: left;
+}
+
+.loginbanner .loginHelp
+{
+	font-size: 1em;
 	font-weight: bold;
 	text-decoration: none;
 	color: white;
+	float: right;
+	margin-top: .6em;
+	margin-right: .5em;
 }
 
-.loginDialog .loginContent
+.logincontent
 {
-	border: 1px solid #BABDB6;
-	border-top-width: 0px;
+	border: solid 1px #BABDB6;
+	border-top-width: 0;
+	background-color: #edeeec;
+	width: 35em;
 }
 
-.loginDialog .loginContext
+.logincontent .logincontentlabel
 {
-	font-size: 0.8em;
-	padding-left: 8px;
-	padding-right: 8px;
-	color: #808080;
+	width: 20%;
 }
 
-.loginDialog .loginMessageType
+.logincontent .logincontenttext
+{
+	padding-right: 2em;
+}
+
+#MessageType
 {
 	color: black;
 	font-weight: bold;
 }
 
-.loginDialog .loginMessage
+#MessageText
 {
 	color: red;
+}
+
+#UserName, #Password, #LanguageList
+{
+	width: 100%;
+}
+
+.logincontent .loginbutton
+{
+	padding-right: 2em;
+}
+
+.loginfooter
+{
+	background-color: #edeeec;
+	border: 1px solid #BABDB6;
+	width: 35em;
 }
 
 .loginDialog .copyrightText
@@ -46,3 +82,4 @@
 	padding-top: 4px;
 	padding-left: 10px;
 }
+
