Added policy changes so all ifolder policies reference the owner.
Changed the selected member control so users can be added with fewer clicks.

git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6253 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/MemberSelect.css
+++ b/simias/src/admin/MemberSelect.css
@@ -11,27 +11,20 @@
 
 .memberselectnav
 {
-	width: 58em;
-	padding-left: .8em;
+	padding-left: 1em;
 	padding-bottom: 1em;
-}
-
-.memberbuttonnav
-{
-	padding-left: 2em;
-	padding-right: 2em;
+	width: 25em;
 }
 
 .okcancelnav
 {
 	clear: both;
-	padding-left: 26em;
-	padding-bottom: 1em;
+	padding-top: 1em;
 }
 
 .memberlist
 {
-	width: 23em;
+	width: 100%;
 }
 
 .memberlistheader
