Fixed bugs in MemberSelect. Finalized changes in effective policies.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6256 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/MemberSelect.css
+++ b/simias/src/admin/MemberSelect.css
@@ -1,12 +1,16 @@
 .headertitle
 {
 	margin-left: 1em;
-	margin-bottom: 0;
 }
 
 .tablecolumn
 {
 	width: 30em;
+}
+
+.leftnav
+{
+	float: left;
 }
 
 .memberselectnav
@@ -96,12 +100,12 @@
 {
 	clear: both;
 	margin-left: 1em;
-	margin-top: 1em;
 	padding-bottom: .5em;
 }
 
 #CreateiFolderDiv
 {
+	float: left;
 	width: 37em;
 	margin-left: 1em;
 	margin-bottom: 2em;
