Moved css files to their own directory.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6260 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderAdmin.css
+++ b/simias/src/admin/css/iFolderAdmin.css
@@ -29,7 +29,7 @@ p, tr, td, ol, ul
 {
 	float: left;
 	background-color: #0054A6;
-	background-image: url(images/banner-fill.png);
+	background-image: url(../images/banner-fill.png);
 	background-repeat: repeat-x;
 	width: 100%;
 	height: 5.9em;
