bug fixes and description edit
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6285 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -388,9 +388,9 @@ td.seperator
 	vertical-align: top;
 }
 
-#NewiFolderName, #NewiFolderDescription
+#NewiFolderName, #NewiFolderDescription, #iFolderDescription
 {
-	width: 20em;
+	width: 30em;
 }
 
 #NewiFolderName
