Finished breadcrumb implementation.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6290 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderAdmin.css
+++ b/simias/src/admin/css/iFolderAdmin.css
@@ -312,6 +312,7 @@ body#users li.users a, body#ifolders li.ifolders a, body#server li.server a, bod
 {
 	float: left;
 	margin-left: .5em;
+	font-size: 1em;
 }
 
 .breadcrumblink, a:active
