Added current logged in user message.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6292 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderAdmin.css
+++ b/simias/src/admin/css/iFolderAdmin.css
@@ -341,3 +341,12 @@ body#users li.users a, body#ifolders li.ifolders a, body#server li.server a, bod
 	text-align: center;
 }
 
+.loggedinas
+{
+	float: right;
+	color: White;
+	font-weight: bolder;
+	margin-right: .5em;
+	margin-top: .3em;
+}
+
