added access, locked, and published to the details
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6293 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -365,8 +365,9 @@ table.list td.history
 
 td.label
 {
-	color: #C6C6C6;
+	color: #777777;
 	text-align: right;
+	width: 10em;
 	padding-right: 8px;
 }
 
