Fixed footer and added file and directory count to ifolder details.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6294 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/UserDetails.css
+++ b/simias/src/admin/css/UserDetails.css
@@ -9,6 +9,7 @@
 	border-bottom: dotted 1px #999999;
 	float: left;
 	width: 100%;
+	padding-bottom: 1em;
 }
 
 .detailinfo th
@@ -29,7 +30,6 @@
 	padding-left: 1em;
 	float: left;
 	width: 38em;
-	height: 45em;
 	border-right: 1px dotted #999999;
 }
 
