--- a/simias/src/admin/css/iFolderAdmin.css
+++ b/simias/src/admin/css/iFolderAdmin.css
@@ -39,7 +39,8 @@ p, tr, td, ol, ul
 
 .footer
 {
-	height: 1em;
+	float: left;
+	height: 1.5em;
 	background-color: #ddd;
 	border-left: 1px solid gray;
 	border-right: 1px solid gray;
@@ -47,20 +48,17 @@ p, tr, td, ol, ul
 	margin-left: auto;
 	margin-right: auto;
 	width: 59em;
-
-float: left;	
+	color: #000066;
 }
 
 .detailtop
 {
 	float: left;
-	padding: .3em .3em .2em .2em;
 	height: 1.5em;
 	color: #000099;
 	background-color: #99CCFF;
-	border-right: 1px solid #999999;
 	border-bottom: 1px solid #999999;
-	border-left: 1px solid #999999;
+	width: 100%;
 }
 
 #policynav
@@ -309,10 +307,27 @@ body#users li.users a, body#ifolders li.ifolders a, body#server li.server a, bod
 
 .logoutbutton, .logoutbutton:visited
 {
+	margin-right: 8px;
+	margin-top: 2px;
 	float: right;
 	text-decoration: none;
 	font-weight: bolder;
 	color: #000066;
+}
+
+.loggedinas
+{
+	float: left;
+	margin-left: 8px;
+	margin-top: 2px;
+}
+
+.loggedinname
+{
+	float: left;
+	margin-left: .4em;
+	margin-top: 2px;
+	font-weight: bolder;
 }
 
 .breadcrumbs
@@ -346,14 +361,5 @@ body#users li.users a, body#ifolders li.ifolders a, body#server li.server a, bod
 	height: 3em;
 	background-color: #ffff99;
 	text-align: center;
-}
-
-.loggedinas
-{
-	float: right;
-	color: White;
-	font-weight: bolder;
-	margin-right: .5em;
-	margin-top: .3em;
 }
 
